WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301322
YouTube full screen transition is broken
https://bugs.webkit.org/show_bug.cgi?id=301322
Summary
YouTube full screen transition is broken
Jean-Yves Avenard [:jya]
Reported
2025-10-22 22:14:43 PDT
Works: IOpenSource
301064@main
Fails: OpenSource
301065@main
https://commits.webkit.org/compare/301065@main...301064@main
rdar://163228181
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2025-10-22 22:18:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52856
EWS
Comment 2
2025-10-23 00:23:22 PDT
Committed
302010@main
(e77199296e94): <
https://commits.webkit.org/302010@main
> Reviewed commits have been landed. Closing PR #52856 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug