YouTube full screen transition is broken https://bugs.webkit.org/show_bug.cgi?id=301322 rdar://163228181

Unreviewed, reverting 301065@main (10bc7cf26356)

Revert "[Site Isolation] Enter fullscreen animation begin needs coordinate transformation with site isolation on"

This reverts commit 10bc7cf26356bbc80c3261052768d5c8ff8d7fc4.

Canonical link: https://commits.webkit.org/302010@main