Source/WebKit/WebProcess/FullScreen/WebFullScreenManager.cpp
@@ -73,7 +73,7 @@ using namespace WebCore;
 
 using WebCore::FloatSize;
 
-static WebCore::IntRect rootViewRectOfContents(WebCore::Element& element)
+static WebCore::IntRect screenRectOfContents(WebCore::Element& element)
 {
     CheckedPtr renderer = element.renderer();
     if (!renderer)
@@ -97,14 +97,7 @@ static WebCore::IntRect rootViewRectOfContents(WebCore::Element& element)
     auto viewportRect = snappedIntRect(frameView->layoutViewportRect());
     contentsRect.intersect(viewportRect);
 
-    return frameView->contentsToRootView(contentsRect);
-}
-
-static void getRootFrameCoordinatesAndIdentifier(Element& element, WebCore::FrameIdentifier& frameID, WebCore::IntRect& coordinates)
-{
-    coordinates = rootViewRectOfContents(element);
-    if (CheckedPtr renderer = element.renderer())
-        frameID = renderer->protectedFrame()->rootFrame().frameID();
+    return frameView->contentsToScreen(contentsRect);
 }
 
 Ref<WebFullScreenManager> WebFullScreenManager::create(WebPage& page)
@@ -317,6 +310,8 @@ void WebFullScreenManager::enterFullScreenForElement(Element& element, HTMLMedia
     }
 #endif
 
+    m_initialFrame = screenRectOfContents(element);
+
 #if ENABLE(VIDEO)
     updateMainVideoElement();
 
@@ -351,18 +346,14 @@ void WebFullScreenManager::enterFullScreenForElement(Element& element, HTMLMedia
         m_inWindowFullScreenMode = true;
     } else {
         ASSERT(m_elementFrameIdentifier);
-        auto rootFrameID = *m_elementFrameIdentifier;
-        getRootFrameCoordinatesAndIdentifier(element, rootFrameID, m_initialFrame);
-
-        m_page->sendWithAsyncReply(Messages::WebFullScreenManagerProxy::EnterFullScreen(*m_elementFrameIdentifier, m_element->protectedDocument()->quirks().blocksReturnToFullscreenFromPictureInPictureQuirk(), WTFMove(mediaDetails), rootFrameID, m_initialFrame), [
+        m_page->sendWithAsyncReply(Messages::WebFullScreenManagerProxy::EnterFullScreen(*m_elementFrameIdentifier, m_element->protectedDocument()->quirks().blocksReturnToFullscreenFromPictureInPictureQuirk(), WTFMove(mediaDetails)), [
             this,
             protectedThis = Ref { *this },
             element = Ref { element },
             willEnterFullScreenCallback = WTFMove(willEnterFullScreenCallback),
             didEnterFullScreenCallback = WTFMove(didEnterFullScreenCallback)
-        ] (std::optional<WebCore::IntRect> initialFrameInScreenCoordinates) mutable {
-            if (initialFrameInScreenCoordinates) {
-                m_initialFrame = *initialFrameInScreenCoordinates;
+        ] (bool success) mutable {
+            if (success) {
                 willEnterFullScreen(element, WTFMove(willEnterFullScreenCallback), WTFMove(didEnterFullScreenCallback));
                 return;
             }
@@ -427,7 +418,7 @@ void WebFullScreenManager::willEnterFullScreen(Element& element, CompletionHandl
     m_page->hidePageBanners();
 #endif
     element.protectedDocument()->updateLayout();
-    m_finalFrame = rootViewRectOfContents(element);
+    m_finalFrame = screenRectOfContents(element);
 
     m_page->sendWithAsyncReply(Messages::WebFullScreenManagerProxy::BeganEnterFullScreen(m_initialFrame, m_finalFrame), [this, protectedThis = Ref { *this }, mode, completionHandler = WTFMove(didEnterFullscreenCallback)] (bool success) mutable {
         if (!success && mode != WebCore::HTMLMediaElementEnums::VideoFullscreenModeInWindow) {
@@ -507,7 +498,9 @@ void WebFullScreenManager::willExitFullScreen(CompletionHandler<void()>&& comple
 #if ENABLE(VIDEO)
     setPIPStandbyElement(nullptr);
 #endif
-    if (!element->protectedDocument()->protectedFullscreen()->willExitFullscreen()) {
+
+    m_finalFrame = screenRectOfContents(*m_element);
+    if (!m_element->protectedDocument()->fullscreen().willExitFullscreen()) {
         close();
         return completionHandler();
     }
